feat(search): server api add search mode parameter and endpoint to list available search modes
